@@ -38,7 +38,7 @@ public class JobTest {
 
     @Test
     public void whenComparatorByNameInc() {
-        List<Job> in =   List.of(
+        List<Job> in =   Arrays.asList(
                 new Job("Fix bug", 1),
                 new Job("Testing", 3),
                 new Job("Impl task", 0)
@@ -58,7 +58,7 @@ public class JobTest {
 
     @Test
     public void whenComparatorByNameDec() {
-        List<Job> in =   List.of(
+        List<Job> in =   Arrays.asList(
                 new Job("Fix bug", 1),
                 new Job("Testing", 3),
                 new Job("Impl task", 0)
@@ -78,7 +78,7 @@ public class JobTest {
 
     @Test
     public void whenComparatorByPriorityDec() {
-        List<Job> in =   List.of(
+        List<Job> in =   Arrays.asList(
                 new Job("Fix bug", 1),
                 new Job("Testing", 3),
                 new Job("Impl task", 0)
